challenge16/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: azribi
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None  # Headless service
  selector:
    app: mongodb
