challenge16/webdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webdb
  namespace: azribi
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webdb
  template:
    metadata:
      labels:
        app: webdb
    spec:
      containers:
      - name: webdb
        image: wahybs/flask-server-app-ch3:v2
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "0.1"
            memory: "100Mi"
          limits:
            cpu: "0.2"
            memory: "200Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: webdb-service
  namespace: azribi
spec:
  selector:
    app: webdb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
