challenge16/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: azribi  
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "webnodb.azribi.net4255.luxbulb.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webnodb-service  
            port:
              number: 80
  - host: "webdb.azribi.net4255.luxbulb.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webdb-service  
            port:
              number: 80
